# civ6-for-codex

./: .gitignore  AGENTS.md  IMPORT_TRIGGER  README.md  README_CN.md  config.example.toml  config.toml  pyproject.toml  start_frontend.ps1
civ6-automation-interface/: README.md
docs/: CHARACTERIZATION_TEST_CATALOG.md  CONTROL_PANEL.md  CURRENT_IMPLEMENTATION_AUDIT.md  DOMAIN_CONTRACTS.md  EXTRACT_STANDALONE_REPO.md  LIVE_SMOKE_TEST.md  PLANNER_CALL_POLICY.md  REFACTOR_CONSTITUTION.md  REFACTOR_EXECUTION_PLAN.md  REFACTOR_PROGRESS.md  REFACTOR_REPORT.md  RUNTIME_STATE_MACHINE.md  WORKFLOW_AGENT_ARCHITECTURE.md
scripts/: __init__.py  apply_upstream_overlay.py
tests/: test_actions.py  test_agent_projection.py  test_awaiting_human_recovery.py  test_bounded_tick_runtime.py  test_builder_binding_safety.py  test_canonical_domain.py  test_canonical_domain_immutability_matrix.py  test_canonical_domain_invariants.py  test_codex_planner.py  test_confirm_engine.py  test_end_turn_rejection_replay.py  test_engine.py  test_event_reconciliation.py  test_game_port.py  test_gate_blocking_cooldown.py  test_information_queries.py  test_issue6_merge_blockers.py  test_issue6_retry_policy.py  test_observation_normalization.py  test_opening_decision_routing.py  test_overlay.py  test_phase0_legacy_baseline.py  test_phase0_recording_harness.py  test_phase0_runtime_composition.py  test_phase4_decision_gaps.py  test_planner_connection.py  test_planner_request_targets.py  test_progression_and_recovery.py  test_replay_and_migrations.py  test_replay_strictness.py  test_responses_planner.py  (+13 more)
(+69 files in other folders)
