[project]
name = "civ6-event-workflow"
version = "0.1.0"
description = "Event-driven deterministic workflow runtime for lmwilki/civ6-mcp with external Codex planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.20",
  "httpx>=0.28",
  "pydantic>=2.10",
  "typer>=0.16",
  "rich>=14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
civ6-workflow = "civ6_workflow.cli:main"
civ6-control = "civ6_workflow.web_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civ6_workflow"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
